auto width to match up with other floaters, Google on IE exhibits this bug
git-svn-id: https://www.redhotpenguin.com/svn/sl/trunk@1984 bd012f14-6cfe-0310-9a23-91b8f1fede10

--- a/SL-Resources/resources/css/sl_floating_footer_leaderboard.css
+++ b/SL-Resources/resources/css/sl_floating_footer_leaderboard.css
@@ -4,8 +4,6 @@ Version: 2.0
 Author: SILVER LINING NETWORKS INC.
 ---------------------------------------------*/
 
-
-
 /*= GENERAL
 === === === === === === === === === === === === === */
 body {
@@ -92,7 +90,7 @@ width: expression(document.body.clientWidth);
 height: 100%; overflow: auto;
 }
 * html #silver_lining_leaderboard {
-width:960px;
+width:auto;
 }
 * html #silver_lining_leaderboard #silver_lining_homepage {
 background: url(../images/logos/sl_logo_small_low.png) no-repeat top left;
